feat: add Identity metadata
